# bipedal-loco-opti

./: .gitignore  LICENSE  README.md  pyproject.toml
centroidal_walk/: casadi_util_functions.py  centroidal_dyn_rotations.py  centroidal_dyn_util.py
centroidal_walk/collocation/: plotting.py  plotting_data.py
centroidal_walk/collocation/foot_trajectory/: foot_gait_phases.py  foot_gait_phases_types.py  foot_trajectory.py  trajectory_eval_structs.py
centroidal_walk/collocation/opti/: centroidal_dyn_poly.py  collocation_opti.py  collocation_opti_data.py  initial_gait.py
centroidal_walk/collocation/opti/casadi_util/: OptiLoadable.py  OptiWithSimpleBounds.py  opti_util.py
centroidal_walk/collocation/serialization/: OptiDecorators.py  yaml_util.py
centroidal_walk/collocation/spline/: polynomial3.py  polynomial4.py  spline_trajectory.py
centroidal_walk/visualization/: RobotAnimation3D.py  simulate_and_plot.py
examples/: biped_collocation.py  biped_collocation_optimal_config.py  biped_collocation_optimal_config__interactive.py  biped_collocation_optimal_config__looping.py  biped_params.py  hopper_collocation.py  hopper_params.py
examples/quadruped/: quadruped_collocation.py
tests/: centroidal_dyn_rotations_test.py  test_util.py
tests/centroidal_walk/collocation/foot_trajectory/: test_foot_trajectory.py  test_foot_trajectory__rolling_shift.py  test_foot_trajectory_init.py
tests/centroidal_walk/collocation/opti/: test_initial_gait.py
tests/centroidal_walk/collocation/serialization/: test_OptiDecorators.py  test_serialize_CentroidalDynPolyOptiData.py  (+2 more)
(+3 files in other folders)
